# AudioSystemTray

./: .gitignore  Cargo.toml  Makefile  README.md  audio-system-tray.desktop
.github/workflows/: build-packages.yml
packaging/arch/: PKGBUILD
packaging/debian/: build-deb.sh
packaging/rpm/: audio-system-tray.spec
src/: backend.rs  main.rs  wpctl.rs
